# ResearchPilot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/graph/: __init__.py  state.py
frontend/: Dockerfile
mcp-server/: pyproject.toml  server.py  test_reliability.py
mcp-server/reliability/: cache.py  circuit_breaker.py  idempotency.py  logging_config.py  retry.py
mcp-server/tools/: company_fundamentals.py  recent_news.py  stock_price.py
