[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "langsmith>=0.10.7",
    "mcp>=1.28.1",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.51.0",
    "yfinance>=1.5.1",
]
